productList -> price block alignment fix
Long product desription was pushing the price block to the bottom.
Made a css tweak (see _tikimaster_styles.css -> .productList > li .price)

--- a/_tikimaster_styles.css
+++ b/_tikimaster_styles.css
@@ -816,11 +816,12 @@ an + b - a - size of loop, b - offset
   padding:3px;
 }
 
-.productList > li h6 {
+.productList > li .price {
   color:#B47E0C;
   font-size:9pt;
-  padding:0 4px;
-  float:right;
+  position:absolute;
+  right:5px;
+  bottom:5px;
 }
 
 button.quickView {
